--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="styles/main.css">
         <link rel="shorcut icon" href="images/favicon.png">
 
         <title>nexter &mdash; your home, your freedom</title>
