build rows of overall layout

--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
 
     <body class="container">
 
+        <nav class="sidebar">Sidebar</nav>
+
+        <header class="header">Header</header>
+
+        <div class="realtors">Top 3 Realtors</div>
+
+        <section class="features">Features</section>
+
+        <div class="story__pictures">Story pictures</div>
+
+        <div class="story__content">Story content</div>
+
+        <section class="homes">Homes</section>
+
+        <section class="gallery">Gallery</section>
+
+        <footer class="footer">Footer</footer>
+
     </body>
 
 </html>
