build the features section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,58 @@
 
         <div class="realtors">Top 3 Realtors</div>
 
-        <section class="features">Features</section>
+        <!-- Features section -->
+        <section class="features">
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="images/sprite.svg#icon-global"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+                <p class="feature__text">Consequatur est illum. Deleniti totam nisi aliquid est earum. Mollitia magnam adipisci modi rerum quod maiores consequatur et eum.</p>
+            </div>
+            
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="images/sprite.svg#icon-trophy"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+                <p class="feature__text">In ducimus libero. Aliquam ullam aut. Sit sit quo possimus nisi omnis quas doloremque nostrum.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="images/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+                <p class="feature__text">Harum vel non non et laborum ab accusamus molestiae sint. Veniam ad ea aut a laudantium quia qui. Et ratione sit expedita necessitatibus.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="images/sprite.svg#icon-key"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">New home in one week</h4>
+                <p class="feature__text">Aut optio ipsa. Maxime autem odio est quia amet odit beatae deserunt. Occaecati natus exercitationem possimus.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="images/sprite.svg#icon-presentation"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
+                <p class="feature__text">Quos voluptatem pariatur deserunt excepturi aut. Pariatur at optio et consequatur enim corrupti tempora voluptate laborum.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="images/sprite.svg#icon-lock"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
+                <p class="feature__text">Aut quas odio omnis inventore suscipit non quos voluptates ipsa. Cupiditate accusantium quaerat nesciunt odit odio totam eum qui.</p>
+            </div>
+
+        </section>
 
         <div class="story__pictures">Story pictures</div>
 
