Build the story section (content)

--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
 
         <div class="story__pictures">Story pictures</div>
 
-        <div class="story__content">Story content</div>
+        <!-- Story content section -->
+        <div class="story__content">
+
+            <h3 class="heading-3 mb-s">Happy Customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-m">&ldquo;The best decision of our lives&rdquo;</h2>
+            <p class="story__text">Laboriosam possimus eveniet tempora. Doloremque sit perferendis totam repellat ipsa eos distinctio.</p>
+            <button class="btn">Find your own home</button>
+
+        </div>
 
         <section class="homes">Homes</section>
 
