--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
 
         </section>
 
-        <div class="story__pictures">Story pictures</div>
+        <div class="story__pictures">
+            <img src="images/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+            <img src="images/story-2.jpeg" alt="New house" class="story__img--2">
+        </div>
 
         <!-- Story content section -->
         <div class="story__content">
