--- a/index.html
+++ b/index.html
@@ -89,10 +89,231 @@
 
         </div>
 
-        <section class="homes">Homes</section>
+        <!-- Homes section -->
+        <section class="homes">
 
+            <!-- House #1 -->
+            <div class="home">
+
+                <img src="images/house-1.jpeg" alt="House 1" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="images/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Beautiful Family House</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>USA</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-profile-mail"></use>
+                    </svg>
+                    <p>5 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>325m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$1,200,000</p>
+                </div>
+                <button class="btn home__btn">Contact realtor</button>
+
+            </div>
+
+            <!-- House #2 -->
+            <div class="home">
+
+                <img src="images/house-2.jpeg" alt="House 2" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="images/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Modern Glass Villa</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Canada</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-profile-mail"></use>
+                    </svg>
+                    <p>6 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>450m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$2,750,000</p>
+                </div>
+                <button class="btn home__btn">Contact realtor</button>
+
+            </div>
+
+            <!-- House #3 -->
+            <div class="home">
+
+                <img src="images/house-3.jpeg" alt="House 3" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="images/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Cozy Country House</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>UK</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-profile-mail"></use>
+                    </svg>
+                    <p>4 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>250m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$850,000</p>
+                </div>
+                <button class="btn home__btn">Contact realtor</button>
+
+            </div>
+
+            <!-- House #4 -->
+            <div class="home">
+
+                <img src="images/house-4.jpeg" alt="House 4" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="images/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Large Rustical Village</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Portugal</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-profile-mail"></use>
+                    </svg>
+                    <p>6 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>480m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$1,950,000</p>
+                </div>
+                <button class="btn home__btn">Contact realtor</button>
+
+            </div>
+
+            <!-- House #5 -->
+            <div class="home">
+
+                <img src="images/house-5.jpeg" alt="House 5" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="images/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Majestic Palace House</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Germany</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-profile-mail"></use>
+                    </svg>
+                    <p>18 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>4230m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$9,500,000</p>
+                </div>
+                <button class="btn home__btn">Contact realtor</button>
+
+            </div>
+
+            <!-- House #6 -->
+            <div class="home">
+
+                <img src="images/house-6.jpeg" alt="House 6" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="images/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Modern Family Apartment</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Italy</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-profile-mail"></use>
+                    </svg>
+                    <p>3 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>180m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="images/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$600,000</p>
+                </div>
+                <button class="btn home__btn">Contact realtor</button>
+
+            </div>
+
+        </section>
+
+        <!-- Gallery section -->
         <section class="gallery">Gallery</section>
 
+        <!-- Footer -->
         <footer class="footer">Footer</footer>
 
     </body>
