--- a/index.html
+++ b/index.html
@@ -372,7 +372,31 @@
         </section>
 
         <!-- Footer -->
-        <footer class="footer">Footer</footer>
+        <footer class="footer">
+            <ul class="nav">
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Find your dream home</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Request proposal</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Download home planner</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Contact us</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Submit your property</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Come work with us</a>
+                </li>
+            </ul>
+            <p class="copyright">
+                &copy; Copyright 2019 by spaceinvadev.<br>Feel free to use this project for your own porpuses.<br>Veritatis laudantium non ut consequuntur id voluptatem. Quia et sed dolore quia ipsam praesentium omnis ad. Quam perspiciatis cupiditate beatae excepturi laboriosam blanditiis quia tempora. Blanditiis laboriosam ipsa odit et tempore debitis praesentium. Culpa ullam sed unde quae ad beatae.
+            </p>
+        </footer>
 
     </body>
 
