Build the sidebar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <body class="container">
 
-        <nav class="sidebar">Sidebar</nav>
+        <nav class="sidebar">
+            <button class="nav-btn"></button>
+        </nav>
 
         <header class="header">Header</header>
 
