Build the Header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
             <button class="nav-btn"></button>
         </nav>
 
-        <header class="header">Header</header>
+        <!-- Header -->
+        <header class="header">
+
+            <img src="images/logo.png" alt="Nexter logo" class="header__logo">
+            <h3 class="heading-3">Your own home:</h3>
+            <h1 class="heading-1">The ultimate personal freedom</h1>
+            <button class="btn header__btn">View our properties</button>
+            <div class="header__seenon-text">Seen on</div>
+            <div class="header__seenon-logos">
+                <img src="images/logo-bbc.png" alt="logo BBC">
+                <img src="images/logo-forbes.png" alt="Logo Forbes">
+                <img src="images/logo-techcrunch.png" alt="Logo Tech Crunch">
+                <img src="images/logo-bi.png" alt="Logo Business Insider">
+            </div>
+
+        </header>
 
         <div class="realtors">Top 3 Realtors</div>
 
