update footer copyright

--- a/index.html
+++ b/index.html
@@ -506,12 +506,10 @@
         </li>
       </ul>
       <p class="copyright">
-        &copy; Copyright 2019 by spaceinvadev.<br />Feel free to use this
-        project for your own porpuses.<br />Veritatis laudantium non ut
-        consequuntur id voluptatem. Quia et sed dolore quia ipsam praesentium
-        omnis ad. Quam perspiciatis cupiditate beatae excepturi laboriosam
-        blanditiis quia tempora. Blanditiis laboriosam ipsa odit et tempore
-        debitis praesentium. Culpa ullam sed unde quae ad beatae.
+        &copy; 2021 nexter. A dummy project coded by
+        <a href="https://spaceinva.dev" target="_blank" rel="noreferrer"
+          >Mauricio Paternina.</a
+        >
       </p>
     </footer>
   </body>
